# netspeed

./: Makefile.am  configure.in
data/: Makefile.am  menu.xml
po/: POTFILES.in
src/: Makefile.am  backend.c  backend.h  dialogs.c  info-dialog.c  info-dialog.h  netspeed.c  netspeed.h  network-device.c  network-device.h  settings-dialog.c  settings-dialog.h  settings.c  settings.h  utils.c  utils.h
